[project]
name = "stakesense"
version = "0.0.0"
description = "Predictive validator quality oracle for Solana"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.27",
  "httpx>=0.27",
  "sqlalchemy>=2.0",
  "psycopg2-binary>=2.9",
  "pydantic>=2.6",
  "pydantic-settings>=2.2",
  "python-dotenv>=1.0",
  "lightgbm>=4.5",
  "pandas>=2.2",
  "numpy>=1.26",
  "scikit-learn>=1.4",
  "joblib>=1.3",
  "tenacity>=8.2",
  "structlog>=24.1",
  "slowapi>=0.1.9",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.1",
  "pytest-asyncio>=0.23",
  "pytest-cov>=4.1",
  "respx>=0.20",
  "ipykernel>=6.29",
  "matplotlib>=3.8",
  "seaborn>=0.13",
  "jupyter>=1.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
